syntax = "proto3";
package wlst.pb2;

option optimize_for = SPEED;

// 合肥开放协议
// 合肥协议中因地址为8字节，可能大于int32上限，所以采用args.saddr字段填充，10进制转字符串即可，可多个。

message Ahhf_rtu_6804 {
    message Switch_out {
        // 开关量输出路数
        int32 switch_out_total = 1;
        // 每个开关量输出的回路数
        repeated int32 switch_out_loop = 2 [packed=true];
    }
    message Switch_in {
        // 电压互感比,默认5
        int32 voltage_transformer = 1;
        // 电流回路数
        int32 loop_total = 2;
        // 电流回路互感比,按真实值提交，通信下发时/5
        repeated int32 current_transformer = 3 [packed=true];
        // 电流回路相位,0-a,1-b,2-c
        repeated int32 current_phase = 4 [packed=true];
    }
    message Switch_in_limit {
        // 回路数量
        int32 loop_total = 5;
        // 电压上下限,按真实值提交，通信下发*100
        repeated double voltage_uplimit = 1 [packed=true];
        repeated double voltage_lowlimit = 2 [packed=true];
        // 电流上下限
        repeated double current_uplimit = 3 [packed=true];
        repeated double current_lowlimit = 4 [packed=true];
    }
    // 序号
    int32 cmd_idx = 1;
    // 数据标记,1-开关量输出参数，2-模拟量采集参数，3-模拟量上下限参数
    repeated int32 data_mark = 2 [packed=true];
    // 信息点，暂不用
    repeated int32 data_point = 3 [packed=true];
    Switch_out switch_out = 4;
    Switch_in switch_in = 5;
    Switch_in_limit switch_in_limit = 6;
    // 应答,0-失败，1-成功，填充顺序和data_mark相同
    repeated int32 status = 9 [packed=true];
}
//江阴节能协议
//Wxjy_esu_d500
message Wxjy_esu_5500 {
    //当前时间 hhmmss
    string time_now = 1;
    //时间1-3 hhmm
    repeated int32 x_time = 2 [packed=true];
    //电压
    repeated int32 x_voltage = 3 [packed=true];
}

message Wxjy_esu_d700 {
    //A相输入电压
    int32 phase_a_in = 1;
    //B相输入电压
    int32 phase_b_in = 2;
    //C相输入电压
    int32 phase_c_in = 3;
    //A相输出电压
    int32 phase_a_out = 4;
    //B相输出电压
    int32 phase_b_out = 5;
    //C相输出电压
    int32 phase_c_out = 6;
}

message Wxjy_esu_d800 {
    //报警状态
    string status = 1;
}